# GRlabs

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
notebooks/: 02-metric_disguise.ipynb  Cadabra4GR-LeoBrewin.ipynb  GR25-05-SchwarzschildMetric.ipynb  Schwarzschild.ipynb  SchwarzschildMetric.ipynb  SchwarzschildMetricV3.ipynb  Untitled2.ipynb
notebooks/.Trash-0/info/: Untitled.ipynb.trashinfo
streamlit/: schwarzschild_potential.py  schwarzschild_potential_photon.py
